--- a/front-end/admin/signin.html
+++ b/front-end/admin/signin.html
@@ -333,7 +333,7 @@
         if (isAdmin) {
           msg.style.color = "seagreen";
           msg.textContent = "เข้าสู่ระบบสำเร็จ (Admin) กำลังไปหน้าแอดมิน...";
-          setTimeout(() => { window.location.replace(toHref("admin.html")); }, 200);
+          setTimeout(() => { window.location.replace(toHref("admin/admin.html")); }, 200);
           return;
         }
 
