--- a/front-end/admin/signup.html
+++ b/front-end/admin/signup.html
@@ -201,11 +201,11 @@
       if (isAdmin) {
         msg.style.color = "seagreen";
         msg.textContent = "สมัครและเข้าสู่ระบบแล้ว (แอดมิน) กำลังไปหน้าแอดมิน...";
-        location.href = "/admin.html";
+        location.href = "admin/admin.html";
       } else {
         msg.style.color = "seagreen";
         msg.textContent = "สมัครและเข้าสู่ระบบแล้ว กำลังไปหน้าแรก...";
-        location.href = "/index.html?login=1";
+        location.href = "/show.html";
       }
     });
   </script>
