--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,7 +10,7 @@
       --fg:#e5e7eb;
       --muted:#9ca3af;
       --shadow:0 8px 32px rgba(0,0,0,.45);
-      --qr-size: 250px;  /* ขนาด QR 250×250 px */
+      --qr-size: 250px;
       --frame: 20px;
       --radius: 16px;
 
@@ -26,64 +26,27 @@
       padding:24px;
     }
     .title{font-weight:800; text-align:center; margin:0;}
-    .subtitle{color:var(--muted); font-weight:700; text-align:center; margin:2px 0 0}
     .warn{color:#ff6b6b; font-weight:800; margin:0; text-align:center}
-
     .plate{
-      font-size:1.5rem;
-      font-weight:900;
-      color:#4ade80;
-      text-align:center;
-      letter-spacing:.6px;
-      margin:8px 0;
+      font-size:1.5rem; font-weight:900; color:#4ade80; text-align:center; letter-spacing:.6px; margin:8px 0;
     }
-
     .toolbar{display:flex; gap:10px; align-items:center; justify-content:center; flex-wrap:wrap; margin-top:8px}
-
     .btn{
-      appearance:none; border:0; cursor:pointer;
-      background:var(--btn); color:var(--btn-text);
-      font-weight:700; padding:10px 14px; border-radius:12px;
-      box-shadow:var(--shadow);
-      transition:.18s ease;
+      appearance:none; border:0; cursor:pointer; background:var(--btn); color:var(--btn-text);
+      font-weight:700; padding:10px 14px; border-radius:12px; box-shadow:var(--shadow); transition:.18s ease;
     }
     .btn:hover{ background:var(--btn-hover); transform:translateY(-1px) }
     .btn:disabled{ opacity:.6; cursor:not-allowed; transform:none }
-
     .size{color:var(--muted); font-weight:700; text-align:center;}
-
-    .qr-frame{
-      background:#ffffff;
-      padding:var(--frame);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      display:inline-block;
-    }
-
-    .qr-box{
-      width:var(--qr-size);
-      height:var(--qr-size);
-      display:flex; align-items:center; justify-content:center;
-    }
-
-    #qrCanvas canvas, #qrCanvas img{
-      width:100%; height:100%;
-      background:#fff;             /* quiet zone ขาว */
-      display:block;
-      border-radius:calc(var(--radius) - 6px);
-    }
-
+    .qr-frame{ background:#ffffff; padding:var(--frame); border-radius:var(--radius); box-shadow:var(--shadow); display:inline-block; }
+    .qr-box{ width:var(--qr-size); height:var(--qr-size); display:flex; align-items:center; justify-content:center; }
+    #qrCanvas canvas, #qrCanvas img{ width:100%; height:100%; background:#fff; display:block; border-radius:calc(var(--radius) - 6px); }
     .uuid{
-      font-family:ui-monospace,Menlo,Consolas,monospace;
-      font-size:1.05rem; color:#ffffff;
-      letter-spacing:.4px;
-      text-align:center;
-      background:#111318;
-      padding:8px 12px; border-radius:10px; box-shadow:var(--shadow);
-      min-width:180px; margin-top:10px;
-      word-break:break-all;
+      font-family:ui-monospace,Menlo,Consolas,monospace; font-size:1.05rem; color:#ffffff; letter-spacing:.4px; text-align:center;
+      background:#111318; padding:8px 12px; border-radius:10px; box-shadow:var(--shadow); min-width:180px; margin-top:10px; word-break:break-all;
     }
     .countdown{ font-weight:800; }
+    .status{ font-size:.9rem; text-align:center; margin-top:6px; color:var(--muted); }
   </style>
 
   <!-- qrcodejs + supabase -->
@@ -92,7 +55,6 @@
 </head>
 <body>
   <h1 class="title">หมายเลขของคุณ</h1>
-  
 
   <!-- ป้ายทะเบียนอยู่เหนือข้อความเตือน -->
   <div class="plate" id="plateCode">—</div>
@@ -100,7 +62,6 @@
 
   <div class="toolbar">
     <div id="sizeLabel" class="size">ขนาด: —</div>
-    
   </div>
 
   <div class="qr-frame">
@@ -113,25 +74,33 @@
   <div class="countdown" aria-live="polite">
     จะสร้างใหม่ใน: <span id="count">—</span> วินาที
   </div>
+
+  <!-- ปุ่มสุ่มทันที -->
   <div><button id="btnNow" class="btn" type="button">สุ่มทันที</button></div>
+
+  <!-- แสดงสถานะการบันทึก (สำคัญสำหรับ debug) -->
+  <div id="saveStatus" class="status">—</div>
 
 <script>
 (function(){
-  // ====== CONFIG (ใช้ค่าเดิมของคุณ) ======
+  // ====== CONFIG: ใช้ค่าจริงของคุณ ======
   const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";
+
+  // สร้าง client
   const supabase = window.supabase.createClient?.(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  const PERIOD_MS = 30_000;     // 30 วินาที
+  const PERIOD_MS = 30_000;
   const QR_PX = 250;
   const QUIET_MARGIN = 4;
 
-  const plateEl = document.getElementById('plateCode');
-  const uuidEl  = document.getElementById('uuidText');
+  const plateEl   = document.getElementById('plateCode');
+  const uuidEl    = document.getElementById('uuidText');
   const sizeLabel = document.getElementById('sizeLabel');
-  const countEl = document.getElementById('count');
-  const qrBox   = document.getElementById('qrCanvas');
-  const btnNow  = document.getElementById('btnNow');
+  const countEl   = document.getElementById('count');
+  const qrBox     = document.getElementById('qrCanvas');
+  const btnNow    = document.getElementById('btnNow');
+  const statusEl  = document.getElementById('saveStatus');
 
   let nextAt = null;
   let ticker = null;
@@ -174,25 +143,31 @@
     sizeLabel.textContent = `ขนาด: ${QR_PX}×${QR_PX} px`;
   }
 
-  // ====== บันทึกลง DB: ตาราง qrcodes, คอลัมน์ user_agent เท่ากับรหัส A001 ======
+  // ====== บันทึกลง DB: public.qrcodes(user_agent) ======
   async function savePlateToDB(plate){
-    if(!supabase) return;
-    // ส่งเฉพาะฟิลด์ user_agent ตามที่ต้องการ
-    const payload = [{ user_agent: plate }];
-    try{
-      await fetch(`${SUPABASE_URL}/rest/v1/qrcodes`, {
-        method: "POST",
-        headers: {
-          apikey: SUPABASE_ANON_KEY,
-          Authorization: `Bearer ${SUPABASE_ANON_KEY}`,
-          "Content-Type": "application/json",
-          Prefer: "return=minimal"   // ลดโอกาสชนสคีมา/constraint
-        },
-        body: JSON.stringify(payload)
-      });
-    }catch(e){
-      console.error("savePlateToDB error:", e);
+    if(!supabase){
+      console.warn('supabase client not ready');
+      statusEl.textContent = '❌ Supabase client not ready';
+      statusEl.style.color = '#f87171';
+      return;
     }
+
+    // ใช้ supabase-js เพื่อได้ error ที่อ่านง่าย
+    const { data, error, status } = await supabase
+      .from('qrcodes')
+      .insert({ user_agent: plate })
+      .select();
+
+    if(error){
+      console.error('Insert error:', error, 'HTTP status:', status);
+      statusEl.textContent = `❌ Insert error (${status}): ${error.message}`;
+      statusEl.style.color = '#f87171';
+      return;
+    }
+
+    console.log('Inserted:', data);
+    statusEl.textContent = `✅ Saved: ${plate}`;
+    statusEl.style.color = '#34d399';
   }
 
   // ====== สุ่ม/เดินหน้า และอัปเดตจอ ======
@@ -208,8 +183,8 @@
     // วาด QR ด้วยข้อความเป็น plate
     drawQR(currentPlate);
 
-    // บันทึกลงฐานข้อมูล: qrcodes.user_agent = currentPlate
-    savePlateToDB(currentPlate);
+    // ⭐ บันทึกลงฐานข้อมูล
+    await savePlateToDB(currentPlate);
 
     // รีเซ็ตตัวนับเวลา
     nextAt = Date.now() + PERIOD_MS;
@@ -234,6 +209,9 @@
 
   // ====== เริ่มต้น ======
   (async function init(){
+    // log ค่าคอนฟิกไว้ช่วย debug (ดูใน Console)
+    console.log('SUPABASE_URL:', SUPABASE_URL);
+
     currentPlate = "A000";  // เริ่มให้กลายเป็น A001 ในการ generate ครั้งแรก
     await generate();
     btnNow.addEventListener('click', ()=> generate({manual:true}));
