--- a/front-end/admin/signup.html
+++ b/front-end/admin/signup.html
@@ -205,7 +205,7 @@
       } else {
         msg.style.color = "seagreen";
         msg.textContent = "สมัครและเข้าสู่ระบบแล้ว กำลังไปหน้าแรก...";
-        location.href = "/show.html";
+        location.href = "admin/show.html";
       }
     });
   </script>
