--- a/front-end/admin/signin.html
+++ b/front-end/admin/signin.html
@@ -338,7 +338,7 @@
         }
 
         const nextParam = new URLSearchParams(location.search).get("next");
-        const finalUrl = resolveNext(nextParam, "show.html");
+        const finalUrl = resolveNext(nextParam, "admin/show.html");
 
         msg.style.color = "seagreen";
         msg.textContent = "เข้าสู่ระบบสำเร็จ กำลังกลับหน้าแรก...";
