--- a/front-end/admin/admin.html
+++ b/front-end/admin/admin.html
@@ -148,8 +148,6 @@
     <div id="panelAudit" class="panel">
       <div class="bar" style="margin-top:12px">
         <div class="audit-toolbar">
-          
-
           <div class="at-f1" style="display:flex; flex-direction:column; gap:6px">
             <label class="muted">ตาราง (target_table)</label>
             <input id="afTable" type="text" placeholder="เช่น qrcodes (ว่าง=ทั้งหมด)" />
@@ -176,16 +174,15 @@
             <label class="muted">ถึง</label>
             <input id="afTo" type="datetime-local" />
           </div>
-
-          
         </div>
       </div>
+
       <!-- แถวบน: ปุ่ม (ซ้ายสุด) + ฟิลเตอร์ -->
-          <div class="audit-actions">
-            <button class="btn" id="btnAuditSearch">ค้นหา</button>
-            <button class="btn-ghost" id="btnAuditReset">ล้างตัวกรอง</button>
-            <button class="btn-ghost" id="btnAuditRefresh">รีเฟรช</button>
-          </div>
+      <div class="audit-actions" style="margin:8px 0 12px">
+        <button class="btn" id="btnAuditSearch">ค้นหา</button>
+        <button class="btn-ghost" id="btnAuditReset">ล้างตัวกรอง</button>
+        <button class="btn-ghost" id="btnAuditRefresh">รีเฟรช</button>
+      </div>
 
       <div class="board">
         <table aria-label="audit logs">
@@ -210,12 +207,13 @@
         <div id="auditCount" class="muted">—</div>
         <div class="muted">โหลดเมื่อ: <span id="auditLast" class="mono">—</span></div>
       </div>
-      <!-- แถวล่าง: เพจจิ้ง -->
-          <div class="pagination-wrap">
-            <div class="pill">หน้า: <span id="auditPageCur" class="mono">1</span> / <span id="auditPageMax" class="mono">1</span></div>
-            <button class="btn-ghost" id="btnAuditPrev" title="ก่อนหน้า">◀</button>
-            <button class="btn-ghost" id="btnAuditNext" title="ถัดไป">▶</button>
-          </div>
+
+      <!-- เพจจิ้ง -->
+      <div class="pagination-wrap" style="margin-top:8px">
+        <div class="pill">หน้า: <span id="auditPageCur" class="mono">1</span> / <span id="auditPageMax" class="mono">1</span></div>
+        <button class="btn-ghost" id="btnAuditPrev" title="ก่อนหน้า">◀</button>
+        <button class="btn-ghost" id="btnAuditNext" title="ถัดไป">▶</button>
+      </div>
     </div>
   </div>
 
@@ -227,7 +225,7 @@ const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 /* ---------- CONSTANTS ---------- */
 const AUDIT_TABLE = "audit_logs";
-const AUDIT_ORDER_PREF = ["event_ts","created_at","inserted_at","id"]; // ลองตามลำดับนี้
+const AUDIT_ORDER_PREF = ["event_ts","created_at","inserted_at","id"];
 const AUDIT_PAGE_SIZE = 50;
 
 const tz='Asia/Bangkok';
@@ -402,9 +400,9 @@ function renderDiffCell(diff){ if(!diff || typeof diff !== 'object' || Object.ke
 function renderMetaCell(meta){ if(!meta) return '<span class="muted">—</span>'; try{ const j = typeof meta === 'string' ? JSON.parse(meta) : meta; const kv = Object.entries(j).map(([k,v])=>`<div><span class="k">${escapeHTML(k)}</span>: ${escapeHTML(typeof v==='object'? JSON.stringify(v): String(v))}</div>`); return `<div style="font-size:13px">${kv.join('')}</div>`; }catch(_){ return `<span class="mono">${escapeHTML(String(meta))}</span>`; }}
 function fmtTS(ts){ try{ return fmtFull.format(new Date(ts)); }catch{ return ts } }
 
-/* ---------- DATA actions ---------- */
+/* ---------- DATA actions (ครบทุกปุ่ม) ---------- */
 btnRefresh.onclick = async ()=>{ if(!CURRENT_TABLE) return; await loadStructure(CURRENT_TABLE); await loadData(); };
-btnLogout.onclick = async ()=>{ await supabase.auth.signOut(); window.location.href = "admin/signin.html"; };
+btnLogout.onclick  = async ()=>{ await supabase.auth.signOut(); window.location.href = "admin/signin.html"; };
 search.addEventListener('input', renderTable);
 tableSelect.addEventListener('change', async ()=>{
   CURRENT_TABLE = tableSelect.value;
@@ -412,12 +410,100 @@ tableSelect.addEventListener('change', async ()=>{
   await loadStructure(CURRENT_TABLE); await loadData();
 });
 
-/* ---------- AUDIT VIEW (with fallback columns) ---------- */
+/* เก็บการแก้ไขลง EDIT_BUFFER */
+tbody.addEventListener('input', (e)=>{
+  const td = e.target.closest('td[contenteditable="true"]');
+  if(!td) return;
+  const col = td.dataset.col;
+  const rowKey = td.dataset.rowkey;
+  const cur = EDIT_BUFFER.get(rowKey) || {};
+  cur[col] = td.textContent;
+  EDIT_BUFFER.set(rowKey, cur);
+  td.style.background = 'rgba(147,197,253,.25)';
+});
+
+/* เพิ่มแถว */
+btnAddRow.onclick = async ()=>{
+  if(!CURRENT_TABLE){ notice.textContent = "เลือกตารางก่อน"; return; }
+  if(CURRENT_TABLE===AUDIT_TABLE){ notice.textContent="ตาราง audit อ่านอย่างเดียว"; return; }
+
+  const newRow = {};
+  for(const c of COLUMNS){
+    if(PKCOLUMNS.includes(c.column_name)) continue;
+    newRow[c.column_name] = null;
+  }
+  const { error } = await supabase.from(CURRENT_TABLE).insert(newRow).select();
+  if(error){ notice.textContent = `❌ เพิ่มแถวผิดพลาด: ${error.message}`; return; }
+  await loadData();
+  notice.textContent = "✅ เพิ่มแถวใหม่แล้ว";
+};
+
+/* บันทึกการแก้ไข */
+btnSaveEdits.onclick = async ()=>{
+  if(!CURRENT_TABLE){ notice.textContent = "เลือกตารางก่อน"; return; }
+  if(EDIT_BUFFER.size===0){ notice.textContent = "ไม่มีการแก้ไข"; return; }
+
+  btnSaveEdits.disabled = true;
+  let ok=0, fail=0;
+  for(const [rowKey, changes] of EDIT_BUFFER){
+    const pk = parseRowKey(rowKey);
+    const { error } = await supabase.from(CURRENT_TABLE).update(changes).match(pk);
+    if(error) fail++; else ok++;
+  }
+  EDIT_BUFFER.clear();
+  await loadData();
+  btnSaveEdits.disabled = false;
+  notice.textContent = `💾 บันทึกแล้ว ${ok} แถว${fail?`, ล้มเหลว ${fail}`:''}`;
+};
+
+/* ลบแถวที่เลือก */
+btnDeleteRows.onclick = async ()=>{
+  if(!CURRENT_TABLE){ notice.textContent = "เลือกตารางก่อน"; return; }
+  const checks = [...document.querySelectorAll('.row-select:checked')];
+  if(checks.length===0){ notice.textContent = "ยังไม่ได้เลือกแถว"; return; }
+  if(!confirm(`ลบ ${checks.length} แถว?`)) return;
+
+  btnDeleteRows.disabled = true;
+  let ok=0, fail=0;
+  for(const ch of checks){
+    const pk = parseRowKey(ch.dataset.rowkey);
+    const { error } = await supabase.from(CURRENT_TABLE).delete().match(pk);
+    if(error) fail++; else ok++;
+  }
+  btnDeleteRows.disabled = false;
+  await loadData();
+  notice.textContent = `🗑️ ลบแล้ว ${ok} แถว${fail?`, ล้มเหลว ${fail}`:''}`;
+};
+
+/* ส่งออก CSV */
+function toCSV(rows){
+  const cols = COLUMNS.map(c=>c.column_name);
+  const esc = v => `"${String(v??'').replaceAll('"','""')}"`;
+  const header = cols.map(esc).join(',');
+  const body = rows.map(r=> cols.map(c=> esc(r[c])).join(',')).join('\n');
+  return header + '\n' + body;
+}
+btnExport.onclick = async ()=>{
+  if(!CURRENT_TABLE){ notice.textContent = "เลือกตารางก่อน"; return; }
+  const { data, error } = await supabase.from(CURRENT_TABLE).select('*');
+  if(error){ notice.textContent = `❌ ส่งออกไม่สำเร็จ: ${error.message}`; return; }
+  const csv = toCSV(data||[]);
+  const blob = new Blob([csv], {type:'text/csv;charset=utf-8;'});
+  const a = document.createElement('a');
+  a.href = URL.createObjectURL(blob);
+  a.download = `${CURRENT_TABLE}-${new Date().toISOString().slice(0,19)}.csv`;
+  a.click();
+  URL.revokeObjectURL(a.href);
+};
+
+/* ---------- AUDIT VIEW ---------- */
+function fmtTSOrBlank(r){
+  return r.event_ts || r.created_at || r.inserted_at || '';
+}
 async function fetchAudit({orderBy}){
   const fromISO = toISOLocal(afFrom.value);
   const toISO = toISOLocal(afTo.value);
 
-  // count
   let countQ = supabase.from(AUDIT_TABLE).select('id', { count:'exact', head:true });
   if(afTable.value) countQ = countQ.eq('target_table', afTable.value.trim());
   if(afEmail.value) countQ = countQ.eq('admin_email', afEmail.value.trim());
@@ -441,19 +527,17 @@ async function fetchAudit({orderBy}){
 
   return await q;
 }
-
 async function loadAudit(reset=false){
   if(reset) auditPage = 1;
 
-  let data=null, error=null, usedCol=null;
+  let data=null, error=null;
   for(const col of AUDIT_ORDER_PREF){
     const r = await fetchAudit({orderBy: col});
-    if(!r.error){ data = r.data; usedCol = col; break; }
-    // ถ้าคอลัมน์ไม่มี ให้ลองตัวถัดไป
+    if(!r.error){ data = r.data; break; }
     if(!/does not exist/i.test(r.error?.message||'')){ error = r.error; break; }
   }
   if(!data && !error){
-    const r = await fetchAudit({orderBy: null}); // ไม่มีคอลัมน์เวลา
+    const r = await fetchAudit({orderBy: null});
     data = r.data; error = r.error;
   }
   if(error){
@@ -467,7 +551,7 @@ async function loadAudit(reset=false){
     auditBody.innerHTML = data.map(r=>{
       const changed = Array.isArray(r.changed_columns) ? r.changed_columns.join(', ') : (r.changed_columns ?? '—');
       const pkShow = r.target_pk ?? '—';
-      const ts = r.event_ts || r.created_at || r.inserted_at || '';
+      const ts = fmtTSOrBlank(r);
       return `<tr>
         <td class="mono">${fmtTS(ts)}</td>
         <td><div class="mono">${escapeHTML(r.admin_email ?? '—')}</div><div class="muted mono" style="font-size:12px">${escapeHTML(r.admin_id ?? '')}</div></td>
@@ -480,7 +564,7 @@ async function loadAudit(reset=false){
     }).join('');
   }
 
-  const pageMax = Math.max(1, Math.ceil((auditTotal||data.length) / AUDIT_PAGE_SIZE));
+  const pageMax = Math.max(1, Math.ceil((auditTotal || data.length) / AUDIT_PAGE_SIZE));
   auditPageMax.textContent = String(pageMax);
   auditPageCur.textContent = String(Math.min(auditPage, pageMax));
   auditCount.textContent = `ทั้งหมด ${auditTotal ?? data.length} รายการ`;
