--- a/front-end/admin/admin.html
+++ b/front-end/admin/admin.html
@@ -248,7 +248,7 @@
 /* ---------- CONFIG ---------- */
 const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";
-const EDGE_BASE = "https://<YOUR-PROJECT-REF>.functions.supabase.co"; // ← เปลี่ยนเป็นของคุณ
+const EDGE_BASE = "https://yowjvmiosrclqstoeqat.functions.supabase.co"; // ← เปลี่ยนเป็นของคุณ
 const EDGE_FUNC = "admin-sql";
 const ALLOW_SQL = true;
 
